# rust-graphics-android-studio-project

./: .gitignore  gradle.properties
app/: build.gradle
app/src/androidTest/java/com/vulkust/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  main.c  main.cpp
app/src/main/res/values/: strings.xml
app/src/test/java/com/vulkust/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
